# boardmate

./: .env.example  .gitignore  Boardmate_key.pem  README.md  run-all.bat  run-backend.bat  run-frontend.bat  stop-all.bat
Books/Panjab/11th/Computer/All_Chapters_Extracted/: Chapter1.html  Chapter2.html  Chapter3.html  Chapter4.html  Chapter5.html  Chapter6.html  (+3 more)
backend/: ollama-test.json  pyproject.toml  requirements.txt  test_rag.py
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  chapters.py  chat.py  health.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  models.py  session.py
backend/app/rag/: chunker.py  cleaner.py  embeddings.py  loader.py  pipeline.py  vector_store.py
backend/app/services/: indexing_service.py  llm_service.py
backend/app/storage/: app.db
backend/app/storage/vector_db/: .gitkeep
data/: README.md
data/Sindh/10th/Chemistry/: chapter01_chemical_equilibrium.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: BoardGrid.jsx  Breadcrumbs.jsx  Card.jsx  ChapterList.jsx  ChatInput.jsx  ChatPanel.jsx  ClassGrid.jsx  MessageBubble.jsx  Navbar.jsx  PdfViewer.jsx  SubjectGrid.jsx  TopNavBar.jsx
frontend/src/data/: catalog.js  mockData.js
frontend/src/pages/: AdminLogin.jsx  ChatLayout.jsx  Dashboard.jsx  Landing.jsx  NotFound.jsx  SignIn.jsx  SignUp.jsx
frontend/src/styles/: auth.css  chat.css  dashboard.css  global.css  landing.css  pdfviewer.css
frontend/src/utils/: auth.js  speech.js
