[project]
name = "boardmate-backend"
version = "1.0.0"
description = "RAG-based education assistant for board students"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "groq>=0.4.0",
]

[dependency-groups]
dev = []
