cd D:\boardmate\backend
..\.venv\Scripts\python.exe -m uvicorn app.main:app --reload --port 8000cd D:\boardmate\backend
..\.venv\Scripts\python.exe -m uvicorn app.main:app --reload --port 8000cd D:\boardmate\backend
..\.venv\Scripts\python.exe -m uvicorn app.main:app --reload --port 8000[project]
name = "boardmate-backend"
version = "1.0.0"
description = "RAG-based education assistant for board students"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "groq>=0.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-groq>=0.0.1",
    "langchain-chroma>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = []
